add_executable(bubble_sort_visualization bubble_sort_visualization.cc)
target_link_libraries(bubble_sort_visualization PRIVATE visualizers ${PROJECT_NAME})

add_executable(insertion_sort_visualization insertion_sort_visualization.cc)
target_link_libraries(insertion_sort_visualization PRIVATE visualizers ${PROJECT_NAME})

add_executable(selection_sort_visualization selection_sort_visualization.cc)
target_link_libraries(selection_sort_visualization PRIVATE visualizers ${PROJECT_NAME})
